--- a/Test2.html
+++ b/Test2.html
@@ -31,11 +31,11 @@
     .column {
       padding: 20px;
       background-color: #f4f4f4;
-      border: 1px solid #ddd;
+      border: 3px solid #ddd;
     }
 
     .column:nth-child(odd) {
-      background-color: #e9e9e9;
+      background-color: #f4f4f4;
     }
 
     p {
@@ -56,7 +56,7 @@
     <h1>Step 6 Player + Vol + Pan + Recorder + EQ + FX</h1>
     <h1>Jugamos como nunca, perdimos como siempre</h1>
     <button id="recButton" onclick="rec()">Rec </button>
-    <button id="pauseButton" onclick="recPause()">Pause </button>
+    <button id="pauseButton" onclick="">Pause </button>
     <button id="recStopButton" onclick="recStop()">Stop </button>
 
     <label for="song">Song</label>
@@ -173,60 +173,62 @@
 
     <button id="buscaButton" onclick="busca1()">Buscar </button>
   </header>
-
+  <!--
+ACA INICIA EL PLAYER 1
+-->
   <div class="column">
     <h2>1</h2>
-    <p id="song_title"></p>
-    <p id="duration_1_text"> </p>
-    <p id="duration_1_value"></p>
+    <p id="player_1_songName">  </p>
+    <p id="player_1_duration_text">  </p>
+    <p id="player_1_duration_value"> </p>
 
     <div>
-      <button id="playButton" onclick="play1()">Play </button>
-      <button id="stopButton" onclick="stop1()">Stop </button>
-      <button id="muteButton" onclick="mute1()">Mute </button>
-      <button id="soloButton" onclick="solo1()">Solo </button>
+      <button id="player_1_playButton" value="1" onclick="play(value)">Play </button>
+      <button id="player_1_stopButton" value="1" onclick="stop(value)">Stop </button>
+      <button id="player_1_muteButton" value="1" onclick="mute(value)">Mute </button>
+      <button id="player_1_soloButton" value="1" onclick="solo1()">Solo </button>
     </div>
 
-    <p id="volume_1_text">Vol</p>
-    <input type='range' min=-41 max=12 step='1' value="-40" id='volume_1'>
-    <p id="volume_1_value"> </p>
+    <p id="player_1_volume_text">Vol</p>
+    <input type='range' min=-41 max=12 step='1' value="-40" id='player_1_volume'>
+    <p id="player_1_volume_value"> </p>
     <br>
-    <p id="pan_1_text">Pan
-      <input type='range' min=-1 max=1 step='0.02' value=0 id='pan_1'>
+    <p id="player_1_pan_text">Pan
+      <input type='range' min=-1 max=1 step='0.02' value=0 id='player_1_pan'>
     </p>
-    <p id="pan_1_value"></p>
+    <p id="player_1_pan_value"></p>
     <br>
-    <p id="playback_rate_1_text">Rate
-      <input type='range' min=0.1 max=1 step='0.01' value=1 id='playback_rate_1'>
+    <p id="player_1_playback_rate_text">Rate
+      <input type='range' min=0.1 max=1 step='0.01' value=1 id='player_1_playback_rate'>
     </p>
-    <p id="playback_rate_1_value"></p>
+    <p id="player_1_playback_rate_value"></p>
     <br>
-    <input class="checkbox" type="checkbox" name="loop_1_checkbox" id="loop_1_checkbox">
-    <p id="loop_checkbox_text">Loop</p>
-    <input class="checkbox" type="checkbox" name="autoplay_checkbox" id="autoplay_1_checkbox">
-    <p id="autoplay_1_text">Autoplay</p>
-    <input class="checkbox" type="checkbox" name="reverse_1_checkbox" id="reverse_1_checkbox">
-    <p id="reverse_1_text">Reverse</p>
+    <input class="checkbox" type="checkbox" name="player_1_loop_checkbox" id="player_1_loop_checkbox">
+    <p id="player_1_loop_checkbox_text">Loop</p>
+    <input class="checkbox" type="checkbox" name="autoplay_checkbox" id="player_1_autoplay_checkbox">
+    <p id="player_1_autoplay_text">Autoplay</p>
+    <input class="checkbox" type="checkbox" name="player_1_reverse_checkbox" id="player_1_reverse_checkbox">
+    <p id="player_1_reverse_text">Reverse</p>
     <br>
-    <p id="loop_start_1_text">loop start</p>
-    <input id="loop_start_1" type="number" min= "0" />
-    <p id="loop_start_1_time"></p>
+    <p id="player_1_loop_start_text">loop start</p>
+    <input id="player_1_loop_start" type="number" min="0" />
+    <p id="player_1_loop_start_time"></p>
     <br>
-    <p id="loop_end_1_text">loop end</p>
-    <input id="loop_end_1" type="number" min= "0"  />
-    <p id="loop_end_1_time"></p>
+    <p id="player_1_loop_end_text">loop end</p>
+    <input id="player_1_loop_end" type="number" min="0" />
+    <p id="player_1_loop_end_time"></p>
     <br>
-    <p id="fadeIn_1_text">fadeIn</p>
-    <input id="fadeIn_1" type="number" min= "0"  />
-    <p id="fadeIn_1_value"></p>
+    <p id="player_1_fadeIn_text">fadeIn</p>
+    <input id="player_1_fadeIn" type="number" min="0" />
+    <p id="player_1_fadeIn_value"></p>
     <br>
-    <p id="fadeOut_1_text">fadeOut</p>
-    <input id="fadeOut_1" type="number" min= "0"  />
-    <p id="fadeOut_1_value"></p>
+    <p id="player_1_fadeOut_text">fadeOut</p>
+    <input id="player_1_fadeOut" type="number" min="0" />
+    <p id="player_1_fadeOut_value"></p>
 
     <label for="filter_1_label">
       <h1>EQ</h1>
-    </label> <button id="eq_On_Off_Button_1" onclick="eqOnOff1()">On </button>
+    </label> <button id="player_1_filter_eq_On_Off_Button" onclick="player_1_filter_eq_On_Off()">On </button>
     <select name="filter_1" id="filter_1_select">
       <option name="lowpass" id="lowpass" value="lowpass">Lowpass</option>
       <option name="highpass" id="highpass" value="highpass">highpass</option>
@@ -238,68 +240,137 @@
       <option name="peaking" id="peaking" value="peaking">peaking</option>
     </select>
     <br>
-    <p id="frequency_1_text">Frequency </p>
-    <input type='range' min=20 max=20000 step='1' value="0" id='frequency_1'>
-    <p id="frequency_1_value"></p>
+    <p id="player_1_filter_frequency_text">Frequency </p>
+    <input type='range' min=20 max=20000 step='1' value="0" id='player_1_filter_frequency'>
+    <p id="player_1_filter_frequency_value"></p>
     <br>
-    <p id="Q_1_text">Q </p>
-    <input type='range' min=0 max=2 step=0.1 value="0" id='Q_1'>
-    <p id="Q_1_value"></p>
+    <p id="player_1_filter_Q_text">Q </p>
+    <input type='range' min=0 max=2 step=0.1 value="0" id='player_1_filter_Q'>
+    <p id="player_1_filter_Q_value"></p>
     <br>
-    <p id="gain_1_text">Gain </p>
-    <input type='range' min=-30 max=12 step='1' value="-30" id='gain_1'>
-    <p id="gain_1_value"></p>
+    <p id="player_1_filter_gain_text">Gain </p>
+    <input type='range' min=-30 max=12 step='1' value="-30" id='player_1_filter_gain'>
+    <p id="player_1_filter_gain_value"></p>
     <br>
-    <p id="detune_1_text">Detune </p>
-    <input type='range' min=0 max=10000 step='10' value="0" id='detune_1'>
-    <p id="detune_1_value"></p>
+    <p id="player_1_filter_detune_text">Detune </p>
+    <input type='range' min=0 max=10000 step='100' value="0" id='player_1_filter_detune'>
+    <p id="player_1_filter_detune_value"></p>
+    <br>
+    <h2>Dynamics here</h2>
 
     <h2>FX</h2>
 
-    <p id="player1_fxSend_1_text"> <h2> 1 Delay <button id="player1_fxSend_1_On_Off_Button" onclick="fxSend_1_OnOff1()">On
-    </button> </h2> 
+    <p id="player1_fxSend_1_text">
+    <h2> 1 Delay <button id="player1_fxSend_1_On_Off_Button" onclick="fxSend_1_OnOff1()">On
+      </button> </h2>
     </p>
     Send
 
-    <button id="player1_fxSend_1_pre_EQ_Button" onclick="player1_fxSend_1_state_foo(value)" value="PreEQ">Pre EQ </button>
-    <button id="player1_fxSend_1_post_EQ_Button" onclick="player1_fxSend_1_state_foo(value)" value="PostEQ">Post EQ </button>
-    <button id="player1_fxSend_1_post_fader_Button" onclick="player1_fxSend_1_state_foo(value)" value="PostFdr">Post Fdr </button>
+    <button id="player1_fxSend_1_pre_EQ_Button" onclick="player1_fxSend_1_state_foo(value)" value="PreEQ">Pre EQ
+    </button>
+    <button id="player1_fxSend_1_post_EQ_Button" onclick="player1_fxSend_1_state_foo(value)" value="PostEQ">Post EQ
+    </button>
+    <button id="player1_fxSend_1_post_fader_Button" onclick="player1_fxSend_1_state_foo(value)" value="PostFdr">Post Fdr
+    </button>
 
     <input type='range' min=-40 max=12 step=1 value="-40" id='player1_fxSend_1'>
     <p id="player1_fxSend_1_value"></p>
     <br>
-    <p id="player1_fxSend_2_text">  <h2> 2 Reverb
-      <button id="player1_fxSend_2_On_Off_Button" onclick="fxSend_2_OnOff1()">On </button>
-    </h2> 
+    <p id="player1_fxSend_2_text">
+    <h2> 2 Reverb
+      <button id="player1_fxSend_2_On_Off_Button" onclick="fx_1_fxSend_2_OnOff()">On </button>
+    </h2>
     </p>
 
     Send
     <input type='range' min=-40 max=12 step=1 value="-40" id='player1_fxSend_2'>
     <p id="player1_fxSend_2_value"></p>
     <br>
-    <p id="player1_fxSend_3_text"> <h2>3 FeedBack Delay <button id="player1_fxSend_3_On_Off_Button" onclick="fxSend_3_OnOff1()">On </button> 
+    <p id="player1_fxSend_3_text">
+    <h2>3 FeedBack Delay <button id="player1_fxSend_3_On_Off_Button" onclick="fxSend_3_OnOff1()">On </button>
     </h2>
     </p>
-    
+
     Send
     <input type='range' min=-40 max=12 step=1 value="-40" id='player1_fxSend_3'>
     <p id="player1_fxSend_3_value"></p>
 
     <br>
-    <p id="player1_fxSend_4_text"> <h2> 4 PitchShift 
+    <p id="player1_fxSend_4_text">
+    <h2> 4 PitchShift
       <button id="player1_fxSend_4_On_Off_Button" onclick="fxSend_4_OnOff1()">On </button>
     </h2>
     </p>
-   
+
     Send
     <input type='range' min=-40 max=12 step=1 value="-40" id='player1_fxSend_4'>
     <p id="player1_fxSend_4_value"></p>
 
-  </div> <!--cierra columna-->
+  </div> <!--cierra columna 1-->
+
+  <!--
+ACA FINALIZA EL PLAYER 2
+-->
   <div class="column">
     <h2> 2</h2>
-    <p>This is the content of the second column.</p>
-  </div>
+
+    <p id="player_2_songName">  </p>
+    <p id="player_2_duration_text">  </p>
+    <p id="player_2_duration_value"> </p>
+    
+
+    <div>
+      <button id="player_2_playButton" value="2" onclick="play(value)">Play </button>
+      <button id="player_2_stopButton" value="2" onclick="stop(value)">Stop </button>
+      <button id="player_2_muteButton" value="2" onclick="mute(value)">Mute </button>
+      <button id="player_2_soloButton" value="2" onclick="solo2()">Solo </button>
+    </div>
+
+    <p id="player_2_volume_text">Vol</p>
+    <input type='range' min=-41 max=12 step='1' value="-40" id='player_2_volume'>
+    <p id="player_2_volume_value"> </p>
+    <br>
+    <p id="player_2_pan_text">Pan
+      <input type='range' min=-1 max=1 step='0.02' value=0 id='player_2_pan'>
+    </p>
+    <p id="player_2_pan_value"></p>
+    <br>
+    <p id="playback_rate_2_text">Rate
+      <input type='range' min=0.1 max=1 step='0.01' value=1 id='player_2_playback_rate'>
+    </p>
+    <p id="player_2_playback_rate_value"></p>
+    <br>
+    <input class="checkbox" type="checkbox" name="player_2_loop_checkbox" id="player_2_loop_checkbox">
+    <p id="player_2_loop_checkbox_text">Loop</p>
+    <input class="checkbox" type="checkbox" name="player_2_autoplay_checkbox" id="player_2_autoplay_checkbox">
+    <p id="player_2_autoplay_text">Autoplay</p>
+    <input class="checkbox" type="checkbox" name="player_2_reverse_checkbox" id="player_2_reverse_checkbox">
+    <p id="player_2_reverse_text">Reverse</p>
+    <br>
+    <p id="player_2_loop_start_text">loop start</p>
+    <input id="player_2_loop_start" type="number" min="0" />
+    <p id="player_2_loop_start_time"></p>
+    <br>
+    <p id="player_2_loop_end_text">loop end</p>
+    <input id="player_2_loop_end" type="number" min="0" />
+    <p id="player_2_loop_end_time"></p>
+    <br>
+    <p id="player_2_fadeIn_text">fadeIn</p>
+    <input id="player_2_fadeIn" type="number" min="0" />
+    <p id="player_2_fadeIn_value"></p>
+    <br>
+    <p id="player_2_fadeOut_text">fadeOut</p>
+    <input id="player_2_fadeOut" type="number" min="0" />
+    <p id="player_2_fadeOut_value"></p>
+
+
+
+  </div>  <!--cierra columna 2-->
+  <!--
+ACA FINALIZA EL PLAYER 2
+-->
+
+
   <div class="column">
     <h2> 3</h2>
     <p>This is the content of the third column.</p>
@@ -313,17 +384,17 @@
 
     <div>
       <p id="fx1_volume_text"> </p>
-        Vol<input type='range' min=-41 max=12 step='1' value="0" id='fx1_volume'>
+      Vol<input type='range' min=-41 max=12 step='1' value="0" id='fx1_volume'>
       <p id="fx1_volume_value"></p>
       <br>
       <p id="pan_fx1_text">Pan</p>
       <input type='range' min=-1 max=1 step='0.01' value=0 id='fx1_pan_fader'>
       <p id="fx1_pan_value"></p>
     </div>
-<!--
+
     <label for="fx1_filter_label">
       <h1>EQ</h1>
-    </label> <button id="fx1_Eq_On_Off_Button" onclick="fx1_eqOnOff()">On </button>
+    </label> <button id="fx1_filter_eq_On_Off_Button" onclick="fx1_filter_eq_On_Off_Button_foo()">On </button>
     <select name="fx1_filter" id="fx1_filter_select">
       <option name="lowpass" id="lowpass" value="lowpass">Lowpass</option>
       <option name="highpass" id="highpass" value="highpass">highpass</option>
@@ -335,28 +406,67 @@
       <option name="peaking" id="peaking" value="peaking">peaking</option>
     </select>
     <br>
-    <p id="frequency_fx1_text">Frequency </p>
-    <input type='range' min=20 max=20000 step='1' value="0" id='fx1_frequency'>
-    <p id="fx1_frequency_value"></p>
+    <p id="fx1_filter_frequency_text">Frequency </p>
+    <input type='range' min=20 max=20000 step='1' value="0" id='fx1_filter_frequency'>
+    <p id="fx1_filter_frequency_value"></p>
     <br>
-    <p id="Q_fx1_text">Q </p>
-    <input type='range' min=0 max=2 step=0.1 value="0" id='fx1_Q'>
-    <p id="fx1_Q_value"></p>
+    <p id="fx1_filter_Q_text">Q </p>
+    <input type='range' min=0 max=2 step=0.1 value="0" id='fx1_filter_Q'>
+    <p id="fx1_filter_Q_value"></p>
     <br>
-    <p id="gain_fx1_text">Gain </p>
-    <input type='range' min=-30 max=12 step='1' value="-30" id='fx1_gain'>
-    <p id="fx1_gain_value"></p>
+    <p id="fx1_filter_gain_text">Gain </p>
+    <input type='range' min=-30 max=12 step='1' value="-30" id='fx1_filter_gain'>
+    <p id="fx1_filter_gain_value"></p>
     <br>
-    <p id="fx1_detune_text">Detune </p>
-    <input type='range' min=0 max=100 step='1' value="0" id='fx1_detune'>
-    <p id="fx1_detune_value"></p>
--->
+    <p id="fx1_filter_detune_1_text">Detune </p>
+    <input type='range' min=0 max=10000 step='100' value="0" id='fx1_filter_detune_1'>
+    <p id="fx1_filter_detune_value"></p>
+
+    <br>
+    fx send
+
+    <p id="fx_1_fxSend_2_text">
+    <h2> 2 Reverb
+      <button id="fx_1_fxSend_2_On_Off_Button" onclick="fx_1_fxSend_2_OnOff()">On </button>
+    </h2>
+    </p>
+    Send
+    <button id="fx1_fxSend_1_pre_EQ_Button" onclick="fx1_fxSend_1_state_foo(value)" value="PreEQ">Pre EQ
+    </button>
+    <button id="fx1_fxSend_1_post_EQ_Button" onclick="fx1_fxSend_1_state_foo(value)" value="PostEQ">Post EQ
+    </button>
+    <button id="fx1_fxSend_1_post_fader_Button" onclick="fx1_fxSend_1_state_foo(value)" value="PostFdr">Post Fdr
+    </button>
+
+
+    <input type='range' min=-40 max=12 step=1 value="-40" id='fx_1_fxSend_2'>
+    <p id="fx_1_fxSend_2_value"></p>
+    <br>
+
+    <p id="fx_1_fxSend_3_text">
+    <h2>3 FeedBack Delay <button id="fx_1_fxSend_3_On_Off_Button" onclick="fx_1_fxSend_3_OnOff()">On </button>
+    </h2>
+    </p>
+    Send
+    <input type='range' min=-40 max=12 step=1 value="-40" id='fx_1_fxSend_3'>
+    <p id="fx_1_fxSend_3_value"></p>
+    <br>
+
+    <p id="fx_1_fxSend_4_text">
+    <h2> 4 PitchShift
+      <button id="fx_1_fxSend_4_On_Off_Button" onclick="fx1_fxSend_4_OnOff()">On </button>
+    </h2>
+    </p>
+    Send
+    <input type='range' min=-40 max=12 step=1 value="-40" id='fx_1_fxSend_4'>
+    <p id="fx_1_fxSend_4_value"></p>
+
   </div>
   <div class="column">
     <h2>FX 2</h2>
     <div>
       <p id="fx2_volume_text"> </p>
-        Vol<input type='range' min=-41 max=12 step='1' value="0" id='fx2_volume'>
+      Vol<input type='range' min=-41 max=12 step='1' value="0" id='fx2_volume'>
       <p id="fx2_volume_value"></p>
       <br>
       <p id="pan_fx2_text">Pan</p>
@@ -368,7 +478,7 @@
     <h2>FX 3</h2>
     <div>
       <p id="fx3_volume_text"> </p>
-        Vol<input type='range' min=-41 max=12 step='1' value="0" id='fx3_volume'>
+      Vol<input type='range' min=-41 max=12 step='1' value="0" id='fx3_volume'>
       <p id="fx3_volume_value"></p>
       <br>
       <p id="pan_fx3_text">Pan</p>
@@ -380,7 +490,7 @@
     <h2>FX 4</h2>
     <div>
       <p id="fx4_volume_text"> </p>
-        Vol<input type='range' min=-41 max=12 step='1' value="0" id='fx4_volume'>
+      Vol<input type='range' min=-41 max=12 step='1' value="0" id='fx4_volume'>
       <p id="fx4_volume_value"></p>
       <br>
       <p id="pan_fx4_text">Pan</p>
