select for effects almost done

--- a/Test2.html
+++ b/Test2.html
@@ -1001,14 +1001,16 @@
       <option name="Vibrato" id="Vibrato" value="Vibrato">Vibrato</option>
     </select>
     <br>
-
-    <div id="fx_4_effects_div">
-
+    <!--
+    <div id="fx_4_effects_div_autoFilter">
+      <p id="fx4_autofilter_baseFrec_text">BaseFrec </p>
+      <input type='range' min=20 max=20000 step='10' value="20" id='fx4_autofilter_baseFrec'>
+      <p id="fx4_autofilter_baseFrec_value"></p>
+      <br>
       <p id="fx4_autofilter_LFORate_text">LFO Rate </p>
       <input type='range' min=0 max=50 step='1' value="0" id='fx4_autofilter_LFORate'>
       <p id="fx4_autofilter_LFORate_value"></p>
       <br>
-
       <p id="fx4_autofilter_depth_text">Depth </p>
       <input type='range' min=0 max=12 step='1' value="0" id='fx4_autofilter_depth'>
       <p id="fx4_autofilter_depth_value"></p>
@@ -1017,9 +1019,12 @@
       <input type='range' min=0 max=7 step='0.25' value="0" id='fx4_autofilter_octaves'>
       <p id="fx4_autofilter_octaves_value"></p>
       <br>
-
-
-      <!--
+      <p id="fx4_autofilter_baseFrec_text">Octaves </p>
+      <input type='range' min=20 max=20000 step='10' value="20" id='fx4_autofilter_baseFrec'>
+      <p id="fx4_autofilter_baseFrec_value"></p>
+      <br>
+-->
+    <!--
  
   interface AutoFilterOptions {
     baseFrequency: Unit.Frequency;
@@ -1068,45 +1073,276 @@ optional
 
 
   
-  
+Tone.AutoFilter.defaults = {
+	"frequency" : 1,
+	"type" : "sine",
+	"depth" : 1,
+	"baseFrequency" : 200,
+	"octaves" : 2.6,
+	"filter" : {
+		"type" : "lowpass",
+		"rolloff" : -12,
+		"Q" : 1,
+	}
+};  
+
+
+
+
   -->
 
-    </div>
 
-
-
-
-
-    <div>
-      <p id="fx4_volume_text"> </p>
-      Vol<input type='range' min=-41 max=12 step='1' value="0" id='fx4_volume'>
-      <p id="fx4_volume_value"></p>
+    <div id="chorus">
+      <p id="fx4_chorus_freq_text"> Chorus</p>
+      Freq<input type='range' min=0 max=20 step='0.01' value="0" id='fx4_chorus_freq'>
+      <p id="fx4_chorus_freq_value"></p>
       <br>
-      <p id="pan_fx4_text">Pan</p>
-      <input type='range' min=-1 max=1 step='0.02' value=0 id='fx4_pan_fader'>
-      <p id="fx4_pan_value"></p>
+      <p id="fx4_chorus_delayTime_text"> </p>
+      Dly Time<input type='range' min=0 max=3500 step='1' value="0" id='fx4_chorus_delayTime'>
+      <p id="fx4_chorus_delayTime_value"></p>
+      <br>
+      <p id="fx4_chorus_depth_text"> </p>
+      Depth<input type='range' min=0 max=1 step='0.01' value="0" id='fx4_chorus_depth'>
+      <p id="fx4_chorus_depth_value"></p>
+      <br>
+      <p id="fx4_chorus_spread_text"> </p>
+      Degrees<input type='range' min=0 max=360 step='1' value="0" id='fx4_chorus_spread'>
+      <p id="fx4_chorus_spread_value"></p>
+      <br> <br>
+
+      <label for="fx_4_chorus_select_type"></label>
+      type:
+      <select name="fx_4_chorus_select_type" id="fx_4_chorus_select_type">
+        <option name="sine" id="sine" value="sine">sine</option>
+        <option name="square" id="square" value="square">square</option>
+        <option name="triangle" id="triangle" value="triangle">triangle</option>
+        <option name="sawtooth" id="sawtooth" value="sawtooth">sawtooth</option>
+      </select>
+      <br>
+      <p id="fx4_chorus_feedback_text"> </p>
+      Feedback<input type='range' min=0 max=1 step='0.01' value="0" id='fx4_chorus_feedback'>
+      <p id="fx4_chorus_feedback_value"></p>
+      <br>
+
     </div>
 
-    <button type="button" class="collapsible">
-      EQ
-    </button>
-    <div class="content">
+    <div id="distortion_div">
+      <p id="fx_4_distortion_text">Amount </p>
+      <input type='range' min=0 max=1 step='0.01' value="0" id='fx_4_distortion'>
+      <p id="fx_4_distortion_value"></p>
+      <br>
+      <p id="fx_4_distortion_input_text">Input </p>
+      <input type='range' min=0 max=3500 step='1' value="0" id='fx_4_distortion_input'>
+      <p id="fx_4_distortion_input_value"></p>
+      <br>
+      <p id="fx_4_distortion_output_text">Output </p>
+      <input type='range' min=0 max=3500 step='1' value="0" id='fx_4_distortion_output'>
+      <p id="fx_4_distortion_output_value"></p>
+      <br>
+      <label for="fx_4_distortion_select_type"></label>
+      Oversample:
+      <select name="fx_4_distortion_select" id="fx_4_distortion_select_type">
+        <option name="none" id="none" value="none">none</option>
+        <option name="2x" id="2x" value="2x">2x</option>
+        <option name="4x" id="4x" value="4x">4x</option>
+      </select>
+      <br>
+    </div>
+
+    <div id="feedback_div">
+      <p id="fx_4_feedback_text">Feedback </p>
+      <input type='range' min=0 max=1 step='0.01' value="0" id='fx_4_feedback'>
+      <p id="fx_4_feedback_value"></p>
+      <br>
+      <p id="fx_4_feedback_delayTime_text"> DelayTime </p>
+      <input type='range' min=0 max=1 step='0.01' value="0" id='fx_4_feedback_delayTime'>
+      <p id="fx_4_feedback_delayTime_value"></p>
+      <br>
+      <p id="fx_4_feedback_maxDelay_text"> MaxDelay </p>
+      <input type='range' min=0 max=100 step='1' value="0" id='fx_4_feedback_maxDelay'>
+      <p id="fx_4_feedback_maxDelay_value"></p>
+      <br>
+      <p id="fx_4_feedback_input_text">Input </p>
+      <input type='range' min=0 max=3500 step='1' value="0" id='fx_4_feedback_input'>
+      <p id="fx_4_feedback_input_value"></p>
+      <br>
+      <p id="fx_4_feedback_output_text">Output </p>
+      <input type='range' min=0 max=3500 step='1' value="0" id='fx_4_feedback_output'>
+      <p id="fx_4_feedback_output_value"></p>
+      <br>
+
 
     </div>
 
-    <button type="button" class="collapsible">
-      Dynamics
-    </button>
-    <div class="content">
+    <div id="freeVerb_div">
+      <p id="fx_4_freeVerb_dampening_text">Dampening </p>
+      <input type='range' min=0 max=1 step='0.01' value="0" id='fx_4_freeVerb_dampening'>
+      <p id="fx_4_freeVerb_dampening_value"></p>
+      <br>
+      <p id="fx_4_freeVerb_roomSize_text"> roomSize </p>
+      <input type='range' min=0 max=1 step='0.01' value="0" id='fx_4_freeVerb_roomSize'>
+      <p id="fx_4_freeVerb_roomSize_value"></p>
+      <br>
+    </div>
+
+    <div id="frequencyShifter_div">
+      <p id="fx_4_frequencyShifter_text">Frequency </p>
+      <input type='range' min=0 max=20000 step='10' value="0" id='fx_4_frequencyShifter'>
+      <p id="fx_4_frequencyShifter_value"></p>
+      <br>
 
     </div>
 
-    <button type="button" class="collapsible">
-      Fx Send
-    </button>
-    <div class="content">
+    <div id="JCReverb_div">
+      <p id="fx_4_JCReverb_text">Frequency </p>
+      <input type='range' min=0 max=1 step='0.01' value="0" id='fx_4_JCReverb'>
+      <p id="fx_4_JCReverb_value"></p>
+      <br>
 
     </div>
+
+    <div id="phaser_div">
+      <p id="fx_4_phaser_frequency_text">Frequency </p>
+      <input type='range' min=20 max=20000 step='10' value="0" id='fx_4_phaser_frequency'>
+      <p id="fx_4_phaser_frequency_value"></p>
+      <br>
+      <p id="fx_4_phaser_octaves_text">Octaves </p>
+      <input type='range' min=0 max=12 step='1' value="0" id='fx_4_phaser_octaves'>
+      <p id="fx_4_phaser_octaves_value"></p>
+      <br>
+      <p id="fx_4_phaser_stages_text">Stages </p>
+      <input type='range' min=0 max=12000 step='1' value="0" id='fx_4_phaser_stages'>
+      <p id="fx_4_phaser_stages_value"></p>
+      <br>
+      <p id="fx_4_phaser_Q_text">Q </p>
+      <input type='range' min=0 max=100 step='1' value="0" id='fx_4_phaser_Q'>
+      <p id="fx_4_phaser_Q_value"></p>
+      <br>
+      <p id="fx_4_phaser_baseFrequency_text">baseFrequency </p>
+      <input type='range' min=0 max=22000 step='10' value="0" id='fx_4_phaser_baseFrequency'>
+      <p id="fx_4_phaser_baseFrequency_value"></p>
+      <br>
+    </div>
+
+    <div id="pingpong_div">
+      <p id="fx_4_pingpong_feedback_text"> </p>
+      Feedback<input type='range' min=0 max=1 step='0.01' value="0" id='fx_4_pingpong_feedback'>
+      <p id="fx_4_pingpong_feedback_value"></p>
+      <br>
+
+      <p id="fx_4_pingpong_delayTime_text"> </p>
+      Dly Time<input type='range' min=0 max=3500 step='1' value="0" id='fx_4_pingpong_delayTime'>
+      <p id="fx_4_pingpong_delayTime_value"></p>
+      <br>
+
+      <p id="fx_4_pingpong_maxDelay_text"> </p>
+      Max Dly<input type='range' min=0 max=35000 step='1' value="0" id='fx_4_pingpong_maxDelay'>
+      <p id="fx_4_pingpong_maxDelay_value"></p>
+      <br>
+
+    </div>
+
+    <div id="pitchshift_div">
+      <p id="fx_4_pitchshift_feedback_text"> </p>
+      Feedback<input type='range' min=0 max=1 step='0.01' value="0" id='fx_4_pitchshift_feedback'>
+      <p id="fx_4_pitchshift_feedback_value"></p>
+      <br>
+      <p id="fx_4_pitchshift_delayTime_text"> </p>
+      Dly Time<input type='range' min=0 max=1 step='0.01' value="0" id='fx_4_pitchshift_delayTime'>
+      <p id="fx_4_pitchshift_delayTime_value"></p>
+      <br>
+      <p id="fx_4_pitchshift_pitch_text"> </p>
+      Pitch<input type='range' min=-100 max=131 step='1' value="0" id='fx_4_pitchshift_pitch'>
+      <p id="fx_4_pitchshift_pitch_value"></p>
+      <br>
+      <p id="fx_4_pitchshift_windowSize_text"> </p>
+      Window secs<input type='range' min=0 max=30 step='0.1' value="0" id='fx_4_pitchshift_windowSize'>
+      <p id="fx_4_pitchshift_windowSize_value"></p>
+      <br>
+    </div>
+
+    <div id="reverb_div">
+      <p id="fx_4_reverb_preDelay_text"> </p>
+      pre Delay<input type='range' min=0 max=300 step='0.1' value="0" id='fx_4_reverb_preDelay'>
+      <p id="fx_4_reverb_preDelay_value"></p>
+      <br>
+      <p id="fx_4_reverb_decay_text"> </p>
+      Dly Time<input type='range' min=0 max=100 step='0.1' value="0" id='fx_4_reverb_decay'>
+      <p id="fx_4_reverb_decay_value"></p>
+      <br>
+    </div>
+
+    <div id="StereoWidener_div">
+      <p id="fx_4_StereoWidener_width_text"> Width</p>
+      <input type='range' min=0 max=300 step='0.1' value="0" id='fx_4_StereoWidener_width'>
+      <p id="fx_4_StereoWidener_width_value"></p>
+      <br>
+    </div>
+
+    <div id="tremolo_div">
+      <p id="fx_4_tremolo_frequency_text"> frequency</p>
+      <input type='range' min=20 max=20000 step='100' value="0" id='fx_4_tremolo_frequency'>
+      <p id="fx_4_tremolo_frequency_value"></p>
+      <br>
+      <p id="fx_4_tremolo_depth_text"> depth</p>
+      <input type='range' min=0 max=1 step='0.01' value="0" id='fx_4_tremolo_depth'>
+      <p id="fx_4_tremolo_depth_value"></p>
+      <br>
+      <p id="fx_4_tremolo_spread_text"> spread</p>
+      <input type='range' min=0 max=1 step='0.01' value="0" id='fx_4_tremolo_spread'>
+      <p id="fx_4_tremolo_spread_value"></p>
+      <br>
+    </div>
+
+    <div id="vibrato_div">
+      <p id="fx_4_vibrato_frequency_text"> frequency</p>
+      <input type='range' min=20 max=20000 step='100' value="0" id='fx_4_vibrato_frequency'>
+      <p id="fx_4_vibrato_frequency_value"></p>
+      <br>
+      <p id="fx_4_vibrato_depth_text"> depth</p>
+      <input type='range' min=0 max=1 step='0.01' value="0" id='fx_4_vibrato_depth'>
+      <p id="fx_4_vibrato_depth_value"></p>
+      <br>
+      <p id="fx_4_vibrato_maxDelay_text">  Max Dly</p>
+      <input type='range' min=0 max=1 step='0.01' value="0" id='fx_4_vibrato_maxDelay'>
+      <p id="fx_4_vibrato_maxDelay_value"></p>
+      <br>
+    </div>
+
+  </div>
+
+
+
+  <div>
+    <p id="fx4_volume_text"> </p>
+    Vol<input type='range' min=-41 max=12 step='1' value="0" id='fx4_volume'>
+    <p id="fx4_volume_value"></p>
+    <br>
+    <p id="pan_fx4_text">Pan</p>
+    <input type='range' min=-1 max=1 step='0.02' value=0 id='fx4_pan_fader'>
+    <p id="fx4_pan_value"></p>
+  </div>
+
+  <button type="button" class="collapsible">
+    EQ
+  </button>
+  <div class="content">
+
+  </div>
+
+  <button type="button" class="collapsible">
+    Dynamics
+  </button>
+  <div class="content">
+
+  </div>
+
+  <button type="button" class="collapsible">
+    Fx Send
+  </button>
+  <div class="content">
+
+  </div>
 
   </div>
 
